--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="shortcut icon" size="16x16, 32x32, 48x48, 64x64, 128x128, 256x256" href="/images/s33_netticon-01.png">
     <title>S33</title>
 </head>
+
 <body>
     <div id="root"></div>
     <script src="./app.js"></script>
 </body>
+
 </html>
